Co-authored-by: SmritiJain123 <SmritiJain123@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,19 +1,69 @@
-<html><head><body style="background-color: rgb(255, 30, 0);">
-    <!--Header-->
-    <title>Welcome to RH book club</title>
-</body></head><h1 style="color:chartreuse">
-    RH BOOK CLUB
-</h1></html>
-<h2><p style="color:aliceblue">Welcome to our <mark style="color:rgb(0, 0, 0)">book club</mark> here you can get <i>amazing</i>  types of books.</p></h2>
-<!--Main Content-->
-<h3><p style="color:aqua"
-><mark>Book no:1</mark>
-</p></h3>
-<h4><p style="color:rgb(0, 255, 64);font-size: xx-large;">
-Harry Potter
-</p></h4><h5 style="font-size: larger ;color:aqua ;"><p><mark>Book no:2</mark></p></h5><h6><p style="color:aqua;font-size: xx-large;">The Witch</p></h6><h7><p 
-style="font-size: x-large;
-color:aliceblue"><b>
-  <!--footer-->  For more information you
-can contact me at</b></p></h7><h8><p style="font-size: xx-large;color:rgb(0, 247, 255)"><b>0333-3267616</b></p></h8><h9><p style="font-size: x-large;color:chartreuse">Location: Pakistan,Karachi,North Nazimabad</p></h9>
+<html>
 
+<head>
+  <title>Rajas Book Club</title>
+</head>
+
+<body style="background-color:rgb(0, 77, 128);color:white">
+  <!--Heading-->
+  <h1 style="text-align:center; color:green;"">My Book Club</h1>
+    <p>Welcome to My book club here you can buy alots of interesting books!</p>
+    <!--Content-->
+    <h2 style=" text-align:center; color:red">Meet our teachers</h2>
+
+    <h3 style="color:aqua"><strong></strong>Hazrat ullah</strong></h3>
+
+    <p>He is a very <i>good</i> teacher of subject <b>English</b> He explain us grammer very well</p>
+
+    <h4 style="color:rgb(255, 0, 195)"><strong></strong>Kashif</strong></h4>
+
+    <p>He is a very <i>good</i> teacher of subject <b>Urdu</b> He explain us Urdu
+      very well</p>
+    <!--best selling books-->
+    <h5 style="color:rgb(255, 157, 0); font-size:20px;"><b><mark>Best Sellers</mark></b> </h5>
+
+    <b>Harry Potter <a href="https://en.wikipedia.org/wiki/J._K._Rowling"><em>By J.K ROWLING</em></a></b> <br>
+
+
+    <table border="6">
+      <tr style="color: brown; size:17px;">
+        <th>Name of the book</th>
+        <th>Year of Publishment</th>
+      </tr>
+      <tr>
+        <td>THE PHILOSOPHERS STONE</td>
+        <td>1967</td>
+      </tr>
+      <tr>
+        <td>THE CURSED CHILD</td>
+        <td>1967</td>
+      </tr>
+     
+    </table>
+
+
+    <b>Name of books by: <em>By Roald Dahl</em></b>
+    <table border="7">
+      <tr style="color: rgb(223, 9, 48);">
+        <th>Name of the book</th>
+        <th>My review</th>
+      </tr>
+      <tr>
+        <td>Fastastic MR.FOX</td>
+        <td>good</td>
+      </tr>
+      <tr>
+        <td>The Witches</td>
+        <td>good</td>
+      </tr>
+    </table>
+
+
+    <!--contact-info-->
+    <p style="color:chartreuse;"><u>Contact me at</u></p>
+    <p style="color: rgb(255, 0, 0);  ">0333-3267616</p>
+    <address>Pakistan,Karachi,North Nazimabad</address>
+    
+</body>
+
+</html>
