--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body style="background-color:rgb(0, 77, 128);color:white">
   <!--Heading-->
-  <h1 style="text-align:center; color:green;"">My Book Club</h1>
+  <h1 style="text-align:center; color:green;">My Book Club</h1>
     <p>Welcome to My book club here you can buy alots of interesting books!</p>
     <!--Content-->
     <h2 style=" text-align:center; color:red">Meet our teachers</h2>
