--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <!--best selling books-->
     <h5 style="color:rgb(255, 157, 0); font-size:20px;"><b><mark>Best Sellers</mark></b> </h5>
 
-    <b>Harry Potter <a href="https://en.wikipedia.org/wiki/J._K._Rowling"><em>By J.K ROWLING</em></a></b> <br>
+    <p style="text-align: center;">Harry Potter <a href="https://en.wikipedia.org/wiki/J._K._Rowling" style="color: aliceblue;"><em>By J.K ROWLING</em></a></b> <br>
+    <img src="OIP (1).jpeg" width="200" style="border: 15px; color: black;"></img>
+    <br><br>
+    <audio controls>
+      <source src="Harry Potter - Main Theme.mp3">
+    </audio>
 
 
     <table border="6">
@@ -43,6 +48,8 @@
 
 
     <b>Name of books by: <em>By Roald Dahl</em></b>
+    <br>
+    <img src="OIP.jpeg" height="150"></img>
     <table border="7">
       <tr style="color: rgb(223, 9, 48);">
         <th>Name of the book</th>
@@ -58,8 +65,16 @@
       </tr>
     </table>
 
-
+<iframe width="200" height="200" src="https://www.youtube.com/embed/fFGS4zZWGoA?si=yrBPFL_DelEtZjJ8"
+  title="YouTube video player" frameborder="4"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="200" height="200" src="https://www.youtube.com/embed/kiF7nBVrW2g?si=CtmHtlyyZ49hvOyy"
+    title="YouTube video player" frameborder="4"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <!--contact-info-->
+  
     <p style="color:chartreuse;"><u>Contact me at</u></p>
     <p style="color: rgb(255, 0, 0);  ">0333-3267616</p>
     <address>Pakistan,Karachi,North Nazimabad</address>
