--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 </head>
 
 <body style="background-color:rgb(0, 77, 128);color:white">
+<!--navigation bar-->
+<nav>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="https://idriesshahfoundation.org/books-childrens-books/" target="_blank">Online
+      Resources</a></li>
+  <li><a href="#">Reading Groups</a></li>
+  <li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+
   <!--Heading-->
   <h1 style="text-align:center; color:green;">My Book Club</h1>
     <p>Welcome to My book club here you can buy alots of interesting books!</p>
@@ -22,7 +33,7 @@
     <!--best selling books-->
     <h5 style="color:rgb(255, 157, 0); font-size:20px;"><b><mark>Best Sellers</mark></b> </h5>
 
-    <p style="text-align: center;">Harry Potter <a href="https://en.wikipedia.org/wiki/J._K._Rowling" style="color: aliceblue;"><em>By J.K ROWLING</em></a></b> <br>
+    <p style="text-align: center;">Harry Potter <a href="https://en.wikipedia.org/wiki/" style="color: aliceblue;"><em>By J.K ROWLING</em></a></b> <br>
     <img src="OIP (1).jpeg" width="200" style="border: 15px; color: black;"></img>
     <br><br>
     <audio controls>
@@ -73,11 +84,26 @@
     title="YouTube video player" frameborder="4"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <section>
+      <article>
+        <h2>News Article</h2>
+        <p> Harry Potter, fictional character, a boy wizard created by British author J.K. Rowling. His coming-of-age exploits are
+        the subject of seven enormously popular novels (1997–2007), which were adapted into eight films (2001–11); a play and a
+        book of its script appeared in 2016.</p>
+      </article>
+    </section>
+
+
     <!--contact-info-->
   
     <p style="color:chartreuse;"><u>Contact me at</u></p>
     <p style="color: rgb(255, 0, 0);  ">0333-3267616</p>
     <address>Pakistan,Karachi,North Nazimabad</address>
+    <ol style="border: 5;">Recomemded books
+      <li>Tavid William</li>
+      <li>Harry Potter</li>
+    </ol>
     
 </body>
 
